--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
             android:layout_below="@id/ll1"
             android:layout_marginBottom="30dp"
             android:layout_marginTop="20dp"
+            android:cacheColorHint="#00000000"
             android:divider="@null"
             android:textColor="#ffffff" />
     </RelativeLayout>
@@ -88,6 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/rl_title"
+            android:cacheColorHint="#00000000"
             android:numColumns="4"
             android:verticalSpacing="20dp" >
         </GridView>
